<resources>
    <string name="app_name">ActionMode</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books_title_name">Books</string>

    <!--  Action Mode Menu Items -->
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="select_all">Select all</string>
    <string name="clear_all">Clear all</string>
    <string name="rename">Rename </string>
    <string name="share">Share</string>
    <string name="set_as">Set as ... </string>
    <string name="properties">Properties</string>
    <!--Toolbar menu items-->
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_safe">Fan Safe</string>
</resources>
